add locales and fix index route

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -19,6 +19,11 @@
   "nav.dashboard": "Dashboard",
   "dashboard.title": "Dashboard",
   "dashboard.welcome": "Welcome to your dashboard!",
+  "dashboard.users": "Users",
+  "dashboard.create": "Create",
+  "dashboard.list": "List",
+  "dashboard.settings": "Settings",
+  "dashboard.security": "Security",
   "save": "Save",
   "auth.lestGo": "Let’s Go",
   "account.created": "Account created",
